Fix video in embed container to stretch on mobile

--- a/css/sass/3-particles/_video.scss
+++ b/css/sass/3-particles/_video.scss
@@ -1,3 +1,4 @@
+.embed,
 .videowrapper {
 	position: relative;
 	padding-bottom: 56.25%; /* 16:9 */
